--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "async": "^2.6.0",
     "libp2p": "^0.13.2",
     "libp2p-mdns": "^0.9.1",
     "libp2p-multiplex": "^0.5.0",
-    "libp2p-railing": "^0.7.1",
     "libp2p-secio": "^0.8.1",
     "libp2p-tcp": "^0.11.1",
     "yargs": "^10.0.3"
