--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "libp2p-multiplex": "^0.5.0",
     "libp2p-secio": "^0.8.1",
     "libp2p-tcp": "^0.11.1",
+    "multiaddr": "^3.0.1",
+    "pump": "^2.0.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {},
